# SQ

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  MULTITENANT.md  README.md  ROUTER.md  TODO.md  basic.phext  bench.ps1  choose-your-own-adventure.phext.phext.json  cross-aws-compile.sh  founding-tenants.json  hello-world.sh  performance.sh  reset.ps1  reset.sh  router-config-founding.example.json  router-config.example.json  tesseract.phext  tesseract.ps1  world.phext
demos/http-content-streams/phext/: one-page-site.phext
demos/http-content-streams/web-basic/: homepage.css  index.html  phextio.min.ts  phextio.ts
demos/phext-armor/: README.md  phext-degraded.phext  xml-degraded.xml
demos/sparse-relational-sequence/: README.md  brain-json.7z  brain-phext.7z  brain-xml.7z  brain.json  brain.phext
demos/sparse-spontaneous-events/: README.md  file-system.7z  json.7z  monolithic-json.7z  phext.7z  tab-delimited.7z
demos/sparse-spontaneous-events/.sq/: link  work
demos/subspace/: page.txt
demos/time-series/: README.md
demos/tracer-shots/: tracer.phext
gateway/: README.md  activate-tenant.sh  cloud-500.json  cloud-500.toml  deploy-mirrorborn.sh  founding-config.json  founding-nine.json  founding-nine.toml  progress.html  provision-500.sh  router-config-founding.json  sq-gateway.py  sq-gateway.toml  sq-gateway.toml.example  tenant-manager.sh
src/: api.rs  cache.rs  config.rs  main.rs  mesh.rs  router.rs  sq.rs  tests.rs  triage.rs
systemd/: README.md  deploy-founding.sh  sq-backend-demo.service  sq-backend-wbic16.service  sq-router.service
(+17 files in other folders)
