[package]
name = "sq"
version = "0.5.4"
authors = ["Will Bickford <wbic16@gmail.com>"]
description = "A minimal client-server for phext hosting"
homepage = "https://phext.io/"
license = "MIT"
edition = "2021"

[dependencies]
libphext = "0.3.1"
percent-encoding = "2.3.1"
raw_sync = "0.1.5"
shared_memory = "0.12.4"
